# farmbook

./: .env.sample  README.md  pyproject.toml
all_data/: payment_data.json  users_data.json
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lessons_link.py  0003_alter_lessons_preview.py  0004_remove_lessons_preview.py  0005_lessons_preview.py  0006_alter_course_preview.py  0007_course_owner_lessons_owner.py  0008_lessons_price.py  0009_course_price_alter_lessons_price.py  0010_course_update_date_lessons_update_date.py  0011_alter_course_update_date.py  0012_alter_course_update_date_alter_lessons_update_date.py
payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_subscription.py  0003_remove_subscription_course_subscription_course.py  0004_alter_subscription_options.py  0005_payments_link_payments_session_id.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_city.py  0003_payments.py  0004_alter_payments_options_remove_payments_course_and_more.py  0005_delete_payments.py
